--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <div class="home-container" id="home">
         <div class="home">
             <div class="header"> 
-                <img src="images/OIP (1).webp" class="logo" alt="logo">
+                <img src="OIP (1).webp" class="logo" alt="logo">
                 <ul class="sidebar">
                     <li><a href="#home">Home</a></li>
                     <li><a href="#about">About</a></li>
@@ -42,12 +42,12 @@
                 </div>
                 <div class="images">
                     <div class="images1">
-                        <img src="images/immm.jpg" class="img22" alt="">
-                        <img src="images/Square-47-Foto-Pascale-van-Reijn-3-scaled.jpg" class="img22" alt="">
+                        <img src="immm.jpg" class="img22" alt="">
+                        <img src="Square-47-Foto-Pascale-van-Reijn-3-scaled.jpg" class="img22" alt="">
                     </div>
                     <div class="images2">
-                        <img src="images/RR(1).jpg" class="img22" alt="">
-                        <img src="images/OIPR (2).webp" class="img22" alt="">
+                        <img src="RR(1).jpg" class="img22" alt="">
+                        <img src="OIPR (2).webp" class="img22" alt="">
                     </div>
 
                 </div>
@@ -60,19 +60,19 @@
             </div>
             <div class="plates">
                 <div class="first-plate">
-                    <img src="images/quatro.webp" class="imgpp" alt="pasta">
+                    <img src="quatro.webp" class="imgpp" alt="pasta">
                     <h4>Quattro Pasta</h4>
                     <p>Lorem ipsum dolor sit,amet consectetur.</p>
                     <P class="price"><span>$55.00</span> $18.00</P>
                 </div>
                 <div class="secand-plate">
-                    <img src="images/veg.webp" class="imgpp" alt="veg">
+                    <img src="veg.webp" class="imgpp" alt="veg">
                     <h4>Vegertarian Pasta</h4>
                     <p>Lorem ipsum dolor sit amet consec.</p>
                     <P class="price"><span>$55.00</span> $18.00</P>
                 </div>
                 <div class="third-palte">
-                    <img src="images/glu.webp" class="imgpp" alt="glu">
+                    <img src="glu.webp" class="imgpp" alt="glu">
                     <h4>Gluten-Free Pasta</h4>
                     <p>Lorem ipsum dolor sit amet consec.</p>
                     <P class="price"><span>$55.00</span> $18.00</P>
@@ -89,35 +89,35 @@
                 <div class="gallery-main">
                     <div class="gallery1">
                         <div class="p1">
-                            <img src="images/lasal.webp" class="gas" alt="lasal">
+                            <img src="lasal.webp" class="gas" alt="lasal">
                             <div class="gallery-price">
                                 <pre>LASAL CHEESE           <span>$18.00</span></pre>
                                 <P>Lorem ipsum, dolor sit amet consectet.</P>
                             </div>
                         </div>
                         <div class="p1">
-                            <img src="images/télécharger.webp" class="gas" alt="jumbo">
+                            <img src="télécharger.webp" class="gas" alt="jumbo">
                             <div class="gallery-price">
                                 <pre>JUMBO CPAR CHARMIP     <span>$20.00</span></pre>
                                 <P>Lorem ipsum, dolor sit amet consectet.</P>
                             </div>
                         </div>
                         <div class="p1">
-                            <img src="images/KOKTAIL.webp" class="gas" alt="koktail">
+                            <img src="KOKTAIL.webp" class="gas" alt="koktail">
                             <div class="gallery-price">
                                 <pre>KOKTAIL JUICE          <span>$25.00</span></pre>
                                 <P>Lorem ipsum, dolor sit amet consectet.</P>
                             </div>
                         </div>
                         <div class="p1">
-                            <img src="images/staik.webp" class="gas" alt="staik">
+                            <img src="staik.webp" class="gas" alt="staik">
                             <div class="gallery-price">
                                 <pre>CAPO STAIK             <span>$40.00</span></pre>
                                 <P>Lorem ipsum, dolor sit amet consectet.</P>
                             </div>
                         </div>
                         <div class="p1">
-                            <img src="images/fruitsalad.webp" class="gas" alt="organic">
+                            <img src="fruitsalad.webp" class="gas" alt="organic">
                             <div class="gallery-price">
                                 <pre>ORGANIC FRUIT SALAD    <span>$60.00</span></pre>
                                 <P>Lorem ipsum, dolor sit amet consectet.</P>
@@ -126,35 +126,35 @@
                     </div>
                     <div class="gallery2">
                         <div class="p1">
-                            <img src="images/KOFTA.webp" class="gas" alt="kofta">
+                            <img src="KOFTA.webp" class="gas" alt="kofta">
                             <div class="gallery-price">
                                 <pre>KOFTA MEAT             <span>$65.00</span></pre>
                                 <P>Lorem ipsum, dolor sit amet consectet.</P>
                             </div>
                         </div>
                         <div class="p1">
-                            <img src="images/spanish.webp" class="gas" alt="spanish">
+                            <img src="spanish.webp" class="gas" alt="spanish">
                             <div class="gallery-price">
                                 <pre>SPANISH PIES           <span>$80.00</span></pre>
                                 <P>Lorem ipsum, dolor sit amet consectet.</P>
                             </div>
                         </div>
                         <div class="p1">
-                            <img src="images/toast.webp" class="gas" alt="toast">
+                            <img src="toast.webp" class="gas" alt="toast">
                             <div class="gallery-price">
                                 <pre>CHEESE TOASET          <span>$95.00</span></pre>
                                 <P>Lorem ipsum, dolor sit amet consectet.</P>
                             </div>
                         </div>
                         <div class="p1">
-                            <img src="images/fs.webp" class="gas" alt="fruitsalad">
+                            <img src="fs.webp" class="gas" alt="fruitsalad">
                             <div class="gallery-price">
                                 <pre> FRUIT SALAD          <span>$150.00</span></pre>
                                 <P>Lorem ipsum, dolor sit amet consectet.</P>
                             </div>
                         </div>
                         <div class="p1">
-                            <img src="images/CHIKEN.webp" class="gas" alt="chiken">
+                            <img src="CHIKEN.webp" class="gas" alt="chiken">
                             <div class="gallery-price">
                                 <pre>CHIKEN SHAWARMA       <span>$155.00</span></pre>
                                 <P>Lorem ipsum, dolor sit amet consectet.</P>
@@ -191,14 +191,14 @@
             <div class="our-food0">
                 <h2 class="ttof">Our Food</h2>
                 <div class="our-food1">
-                    <img src="images/th.webp" class="igf" alt="th">
-                    <img src="images/dd.webp" class="igf" alt="dd">
-                    <img src="images/caption.jpg" class="igf" alt="caption">
+                    <img src="th.webp" class="igf" alt="th">
+                    <img src="dd.webp" class="igf" alt="dd">
+                    <img src="caption.jpg" class="igf" alt="caption">
                 </div>
                 <div class="our-food2">
-                    <img src="images/ff.webp" class="igf" alt="ff">
-                    <img src="images/maxican_1104772-1739.jpg" class="igf" alt="maxican">
-                    <img src="images/strang.webp" class="igf" alt="strang">
+                    <img src="ff.webp" class="igf" alt="ff">
+                    <img src="maxican_1104772-1739.jpg" class="igf" alt="maxican">
+                    <img src="strang.webp" class="igf" alt="strang">
                 </div>
             </div>
             <div class="add" id="contact">
@@ -241,4 +241,5 @@
     
     
 </body>
+
 </html>
